--- a/start/start/start/src/main/resources/application.properties
+++ b/start/start/start/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=start
 server.port=9000
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mariadb://localhost:3306/cinema
+spring.datasource.url=jdbc:h2:file:~/data/cinema
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=root
-spring.datasource.password=test
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
